Small spacing and sizing fixes

--- a/src/scss/Editor/properties.scss
+++ b/src/scss/Editor/properties.scss
@@ -93,10 +93,14 @@
 	}
 }
 
-.metadata-container .metadata-add-button {
-	margin-top: var(--size-4-2);
-	margin-left: var(--size-4-1);
-	border: var(--window-border);
+.metadata-container {
+	transform: unset;
+
+	.metadata-add-button {
+		margin-top: var(--size-4-2);
+		margin-left: var(--size-4-1);
+		border: var(--window-border);
+	}
 }
 
 .multi-select-container {
