--- a/src/scss/Plugins/Core/bookmarks.scss
+++ b/src/scss/Plugins/Core/bookmarks.scss
@@ -1,7 +1,7 @@
 // [Plugins - Core] Bookmarks
 .workspace-leaf-content[data-type="bookmarks"] {
 	.tree-item-icon {
-		width: unset;
+		width: 20px;
 		padding-right: var(--size-4-1);
 	}
 
