--- a/src/scss/Plugins/Core/commandPalette.scss
+++ b/src/scss/Plugins/Core/commandPalette.scss
@@ -28,7 +28,6 @@
 	}
 
 	.prompt-instructions {
-		padding: var(--size-2-1) var(--size-4-2);
 		background-color: var(--background-secondary);
 		border-top: var(--window-border);
 	}
