--- a/src/scss/User Interface/Sidebar/tabHeader.scss
+++ b/src/scss/User Interface/Sidebar/tabHeader.scss
@@ -26,6 +26,12 @@
 	}
 }
 
+.mod-root .workspace-tab-header-status-icon,
+.mod-root .workspace-tab-header-inner-icon {
+	--icon-size: var(--icon-s);
+	--icon-stroke: var(--icon-s-stroke-width);
+}
+
 .workspace-tab-header-container {
 	padding-right: unset;
 	padding-left: 1px;
