--- a/src/scss/User Interface/popups.scss
+++ b/src/scss/User Interface/popups.scss
@@ -60,7 +60,7 @@ div.notice-container div.notice {
 
 // [UI] Suggestion Popup
 .prompt-instructions {
-	padding-bottom: unset;
+	padding: var(--size-2-1) var(--size-4-2);
 }
 
 // [UI] Tooltip Popup
