--- a/src/scss/User Interface/settings.scss
+++ b/src/scss/User Interface/settings.scss
@@ -253,7 +253,6 @@ img.community-theme-lightbox {
 	.setting-item:first-child {
 		body:not(.is-phone) & {
 			padding-left: unset;
-			margin-bottom: unset;
 			margin-left: var(--size-4-2);
 		}
 	}
